packages.
- [Ticket #405] When post image creation scripts fail, the image is deleted.
- [Ticket #520] Ganglia configuration scripts do not generate any error
anymore.
- [Ticket #542] Include the documentation into the OSCAR binary packages.
- [Ticket #562] Include cron in the list of package for Debian based images.
- [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
- [Ticket #570] Correctly generate ssh keys on the headnode.

6.0.4:
- Update Configurator to 1.0.3.
- Update ODA to 1.4.6.
- Update OPKG JobMonarch to 0.1.3.
- Update OPKG NTPCONFIG to 1.32.2.
- Update OPKG ODA to 1.32.2.
- Update OPKG SGE to 6.1.0.
- Update OPKG SIS to 4.0.5.
- Update OPKG Switcher to 1.0.11.
- Update OPKG Torque to 2.1.13.
- Update OPKGC to 0.4.2.
- Update ORM to 1.4.1.
- Update Opium to 1.3.1.
- Update PackMan to 3.1.11.
- Update RAPT to 2.8.6.
- Update Selector to 1.2.4.
- Update sync-files to 2.5.2.
- Update SystemInstaller to 2.4.4.
- Update Yume to 2.8.10.
- Fix the PATH environment variable update.
- [Ticket #134] Make sure that /proc is umounted at the end of the creation of
an image.
- [Ticket #314] Fix the hard drive type detection (SCSI vs. IDE) when using the
CLI.
- [Ticket #364] Include the support of Ganglia on Debian based systems
(Experimental package set).
- [Ticket #380] Include the support of Torque on Debian based systems
(Experimental package set).
- [Ticket #466] The oscar script supports short options.
OSCAR.
- [Ticket #551] A correct initrd is generated for latest RPM based distros.
- [Ticket #555] Fix the missing Tk dependencies for the Torque Debian package
(for the GUI package).
- [Ticket #556] Torque is now correctly setup on Debian based systems.
- [Ticket #558] Since switcher is now functional, it is now possible to
specify kernel boot parameters.
- Add Ubuntu-904-x84_64 in the list of supported distributions (still
experimental).
- Convert the ssh_install script to Perl so it is easier to maintain (some