@@ -47,19 +47,24 @@ tasks on a cluster.</description>
         <dist>fc</dist>
         <dist>ydl</dist>
       </filters>
-      <pkg>c3</pkg>
       <pkg>c3-profiled</pkg>
+      <pkg>c3-ckillnode</pkg>
     </requires>
     <requires>
       <filters>
         <dist>debian</dist>
       </filters>
-      <pkg>c3</pkg>
+      <pkg>c3-ckillnode</pkg>
     </requires>
   </clientDeps>
   <apiDeps>
   </apiDeps>
   <changelog>
+    <versionEntry version="4.1.4-1">
+      <changelogEntry authorName="Geoffroy Vallee" date="2009-10-06T02:32:44-05:00">
+        <item>[Ticket #564] Revisit the C3 packages installed on compute nodes.</item>
+      </changelogEntry>
+    </versionEntry> 
     <versionEntry version="4.1.3-1">
       <changelogEntry authorName="Geoffroy Vallee" date="2009-03-02T22:59:06-05:00">
         <item>The C3 script should not be run after image creation but after node definition.</item>
