@@ -11,6 +11,7 @@ anymore.
 - [Ticket #542] Include the documentation into the OSCAR binary packages.
 - [Ticket #562] Include cron in the list of package for Debian based images.
 - [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
+- [Ticket #564] The correct C3 packages are now installed on compute nodes.
 - [Ticket #570] Correctly generate ssh keys on the headnode.
 
 6.0.4:
